--- a/Frontend/FormsWeb/src/styles.scss
+++ b/Frontend/FormsWeb/src/styles.scss
@@ -82,3 +82,19 @@ html {
         
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;direction: rtl; width: 100vw;}
+::-webkit-scrollbar {
+  width: 0.6em;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.3);
+  border-radius: 3px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background-color:var(--color-info-dark);
+  outline: 1px solid var(--color-light);
+  border-radius: 3px;
+}
